# proto-file-parser

./: Cargo.toml  Makefile  Readme.md  example.proto
src/: lib.rs  main.rs  proto.pest
tests/: parser_tests.rs
