[package]
name = "proto-parser"
version = "0.1.0"
edition = "2021"
description = "A Protocol Buffer Definition (.proto) parser that converts proto files to JSON format"
authors = ["Illia Antypenko i.antypenko@ukma.edu.ua"]
repository = "https://github.com/yourusername/proto-file-parser"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
pretty_assertions = "1.4"