[package]
name = "proto-file-parser"
version = "0.1.1"
edition = "2021"
description = "A Protocol Buffer Definition (.proto) parser that converts proto files to JSON format"
authors = ["Illia Antypenko i.antypenko@ukma.edu.ua"]
repository = "https://github.com/yourusername/proto-file-parser"
license = "MIT"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tempfile = "3.14.0"

[dev-dependencies]
anyhow = "1.0"
pretty_assertions = "1.4"